--- a/RecipeList/RecipeList.csproj
+++ b/RecipeList/RecipeList.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecipeListLibrary\RecipeListLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
